--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-d0e04d0a02d88579cc6e05d7334ea040.js" defer></script>
+  <script src="./_expo/static/js/web/index-d0e04d0a02d88579cc6e05d7334ea040.js" defer></script>
 </body>
 </html>
